Fixed buttons on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   overflow: visible;
   background: rgb(40, 109, 199);
+  font-size: 14px;
 }
 
 h1,
@@ -208,10 +209,13 @@ li {
 }
 
 @media only screen and (max-width: 1000px) {
-  h1 {
-    font-size: 1em;
-  }
   .log {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 6400px) {
+  h1 {
+    font-size: 3rem;
   }
 }
